log files added

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 mockedNodeFromProperties = {"id":"b4190a0c-8ced-46e3-ba11-2655b1707ac4","nodes":{"5c810cea-8d17-4445-a465-ce42d34cc76f":{"Node.Node Type":"Node.Leaf","id":"5c810cea-8d17-4445-a465-ce42d34cc76f","value":"Novo texto mockado","nodes":{}},"88c181a6-e7cc-4db6-bd2d-2f25bb589ce6":{"Node.Node Type":"Node.Branch","id":"88c181a6-e7cc-4db6-bd2d-2f25bb589ce6","nodes":{"7a15cca6-a5db-479b-b9c5-735d69a87dc6":{"Node.Node Type":"Node.Leaf","id":"7a15cca6-a5db-479b-b9c5-735d69a87dc6","value":"de exemplo","nodes":{}},"ea5851f5-2bd9-4b96-a383-89a10327dd8c":{"Node.Node Type":"Node.Leaf","id":"ea5851f5-2bd9-4b96-a383-89a10327dd8c","value":"para","nodes":{}},"18e990b0-27c1-4f3e-a203-2a118458ca3f":{"Node.Node Type":"Node.Branch","id":"18e990b0-27c1-4f3e-a203-2a118458ca3f","nodes":{"d2807f8e-62df-47bb-a58e-ec0a46245669":{"Node.Node Type":"Node.Leaf","id":"d2807f8e-62df-47bb-a58e-ec0a46245669","value":"assemble","nodes":{}},"7565f8c8-002e-45c4-a180-3eca186177b8":{"Node.Node Type":"Node.Leaf","id":"7565f8c8-002e-45c4-a180-3eca186177b8","value":"do documento. Horário: 14:10","nodes":{}}}}}}}}
-logging.level.root=INFO
-logging.level.com.concepts.spring=TRACE
+
+#logging.level.root=INFO
+#logging.level.com.concepts.spring=TRACE
+#
+#logging.file.name = appLog.log
