--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,12 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <scope>runtime</scope>
+            <optional>true</optional>
+        </dependency>
 
         <dependency>
             <groupId>com.google.code.gson</groupId>
@@ -46,8 +52,6 @@
             <artifactId>lombok</artifactId>
             <optional>true</optional>
         </dependency>
-
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -62,11 +66,13 @@
         </dependency>
 
     </dependencies>
-<profiles>
-    <profile>
-        <id>vinicius</id>
-    </profile>
-</profiles>
+
+    <profiles>
+        <profile>
+            <id>vinicius</id>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
